src/objects/CBL_WetMill__c.object
<CustomObject>
    <fields>
        <fullName>wetMillAlreadyRegistered__c</fullName>
        <label>wetMillAlreadyRegistered</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetMillCode__c</fullName>
        <label>wetMillCode</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wetMillCountry__c</fullName>
        <label>wetMillCountry</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wetMillDepartment__c</fullName>
        <label>wetMillDepartment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wetMillDistrict__c</fullName>
        <label>wetMillDistrict</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wetMillLocation__c</fullName>
        <label>wetMillLocation</label>
        <picklist>
            <picklistValues>
                <fullName>Medellin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>wetMillMunicipality__c</fullName>
        <label>wetMillMunicipality</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CBL_WetMill</label>
    <nameField>
        <displayFormat>WM-{0000000}</displayFormat>
        <label>CBL_WetMill Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBL_WetMills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>